Add localization support for EpsteinDrive and update engine models
- Created a new localization file for English (en-us) with descriptions for the Epstein Drive parts.
- Updated model references in the engine configurations for Battleship, Cruiser, and Frigate to new assets.
- Removed the Dependencies.cfg file to streamline part management without external dependencies.

--- a/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Cruiser.cfg
+++ b/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Cruiser.cfg
@@ -1,4 +1,4 @@
-// GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Cruiser.cfg
+﻿// GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Cruiser.cfg
 // Two modes: Cruise + Overburn. Legacy fx_* + sound_* only.
 
 PART
@@ -9,7 +9,7 @@ PART
 
 	MODEL
 	{
-		model = EpsteinDrive/Assets/PlaceholderEngine
+		model = EpsteinDrive/Assets/BussardFusion
 	}
 	rescaleFactor = 1.0
 
