--- a/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Frigate.cfg
+++ b/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Frigate.cfg
@@ -1,4 +1,4 @@
-// GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Frigate.cfg
+﻿// GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Frigate.cfg
 // Option A (legacy fx_* + sound_* only). No custom EFFECTS{}.
 
 PART
@@ -9,7 +9,7 @@ PART
 
 	MODEL
 	{
-		model = EpsteinDrive/Assets/PlaceholderEngine
+		model = EpsteinDrive/Assets/EpsteinDriveV4
 	}
 	rescaleFactor = 1.0
 
