--- a/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Battleship.cfg
+++ b/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Battleship.cfg
@@ -1,4 +1,4 @@
-// GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Battleship.cfg
+﻿// GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Battleship.cfg
 // Two modes: Cruise + Overburn. Legacy fx_* + sound_* only.
 
 PART
@@ -9,7 +9,7 @@ PART
 
 	MODEL
 	{
-		model = EpsteinDrive/Assets/PlaceholderEngine
+		model = EpsteinDrive/Assets/DaedalusDrive
 	}
 	rescaleFactor = 1.0
 
