Update propellant configurations for EpsteinDrive engines
- Replaced existing propellant definitions in the Battleship, Cruiser, and Frigate engine configurations.
- Introduced LiquidFuel and Oxidizer with adjusted ratios for improved performance.
- Ensured consistency across all engine parts for better gameplay balance.

--- a/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Cruiser.cfg
+++ b/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Cruiser.cfg
@@ -97,8 +97,17 @@ PART
 		maxThrust = 60000
 		heatProduction = 250
 
-		PROPELLANT { name = Water         ratio = 1000  DrawGauge = true }
-		PROPELLANT { name = FusionPellets ratio = 1 }
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 0.9
+			DrawGauge = true
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 1.1
+		}
 
 		atmosphereCurve
 		{
@@ -119,8 +128,17 @@ PART
 		maxThrust = 84000
 		heatProduction = 450
 
-		PROPELLANT { name = Water         ratio = 1000  DrawGauge = true }
-		PROPELLANT { name = FusionPellets ratio = 1 }
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 0.9
+			DrawGauge = true
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 1.1
+		}
 
 		atmosphereCurve
 		{
