--- a/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Frigate.cfg
+++ b/GameData/EpsteinDrive/Parts/Engines/EpsteinDrive_Frigate.cfg
@@ -97,8 +97,17 @@ PART
 		maxThrust = 30000
 		heatProduction = 200
 
-		PROPELLANT { name = Water        ratio = 1000  DrawGauge = true }
-		PROPELLANT { name = FusionPellets ratio = 1 }
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 0.9
+			DrawGauge = true
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 1.1
+		}
 
 		atmosphereCurve
 		{
@@ -119,8 +128,17 @@ PART
 		maxThrust = 30000
 		heatProduction = 120
 
-		PROPELLANT { name = Water        ratio = 1000  DrawGauge = true }
-		PROPELLANT { name = FusionPellets ratio = 1 }
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 0.9
+			DrawGauge = true
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 1.1
+		}
 
 		atmosphereCurve
 		{
